2010-05-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in: Remove references to usg5-4 and bsd-common, $opsys
	does not use them.
	(X11R5_INHIBIT_I18N): Remove, unused.

2010-05-15  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIBXMENU): Set to empty if !HAVE_X_WINDOWS.

	* configure.in (FONT_OBJ): Set to empty if !HAVE_X_WINDOWS.

2010-05-15  Ken Raeburn  <raeburn@raeburn.org>

	* configure.in: Look for version string in its new location.

2010-05-15  Eli Zaretskii  <eliz@gnu.org>

	* config.bat: Remove support for DJGPP v1.x.

2010-05-15  Glenn Morris  <rgm@gnu.org>

	* configure.in (OLDXMENU_TARGET): New output variable.

	* Makefile.in (install-arch-dep): Update odd NS rule for Emacs version.

	* Makefile.in (install-arch-indep): Remove references to RCS, CVS,
	and other files that no longer exist.

2010-05-14  Glenn Morris  <rgm@gnu.org>

	* configure.in (cpp_undefs): Add mktime, register, X11.

	* configure.in (GPM_MOUSE_SUPPORT): Remove.
	(MOUSE_SUPPORT, TOOLTIP_SUPPORT, WINDOW_SUPPORT): New output variables.
	(HAVE_WINDOW_SYSTEM, HAVE_MOUSE): Move out of AC_BOTTOM.

	* configure.in (NS_IMPL_GNUSTEP_INC): New output variable.
	(GNUSTEP_MAKEFILES): Do not output.

2010-05-13  Glenn Morris  <rgm@gnu.org>

	* configure.in: Fix some paren typos.

	* configure.in (OLDXMENU, LIBXMENU): Set to empty if !HAVE_MENUS.

	* configure.in (LD_SWITCH_X_SITE, C_SWITCH_X_SITE): Do not define.

2010-05-12  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIB_SRC_EXTRA_INSTALLABLES): Remove, unused.

	* configure.in (LIB_GCC): New output variable.

2010-05-11  Glenn Morris  <rgm@gnu.org>

	* make-dist (msdos): No more mainmake.

	* configure.in: Generate lib-src/Makefile directly, do not run cpp.
	* config.bat: Do not run cpp on lib-src/Makefile.in.

	* config.bat [HAVE_X11]: Run sed3x.inp on lib-src/Makefile.

2010-05-10  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIBS_SYSTEM): New output variable, replacing cpp.
