@@ -1,3 +1,8 @@
+2010-05-16  Glenn Morris  <rgm@gnu.org>
+
+	* sed1v2.inp (GNUSTEP_SYSTEM_LIBRARIES): Remove.
+	(NS_IMPL_GNUSTEP_TEMACS_LDFLAGS): Edit to empty.
+
 2010-05-15  Glenn Morris  <rgm@gnu.org>
 
 	* sed1v2.inp (LIBXMENU): Edit to empty.
