@@ -1,5 +1,11 @@
 2010-05-16  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (GNUSTEP_SYSTEM_LIBRARIES): Remove, unused.
+	(NS_IMPL_GNUSTEP_TEMACS_LDFLAGS): New, set by configure.
+	(LD) [NS_IMPL_GNUSTEP]: Set to $(CC) -rdynamic.
+	(temacs${EXEEXT}): Remove $LOCALCPP, never defined or referenced.
+	Make most of the NS_IMPL_GNUSTEP case the same as the default case.
+
 	* Makefile.in (temacs${EXEEXT}) [!NS_IMPL_GNUSTEP]:
 	Remove ${STARTFLAGS}, nothing ever sets it.
 
