@@ -1,3 +1,10 @@
+2010-05-16  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (NS_IMPL_GNUSTEP_TEMACS_LDFLAGS): New output variable.
+	(START_FILES): Set to empty if NS_IMPL_GNUSTEP.
+	(GNUSTEP_SYSTEM_HEADERS, GNUSTEP_SYSTEM_LIBRARIES): Do not output,
+	nothing uses.
+
 2010-05-16  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* configure.in: Remove references to usg5-4 and bsd-common, $opsys
